--- a/prehtml/bitmaps.htm
+++ b/prehtml/bitmaps.htm
@@ -124,7 +124,7 @@ the last pixel at <i>w&times;h</i>&minus;1.
 </p>
 
 <div class="cblock">
-<table id="img-link-big">
+<table class="frame-group" id="img-link-big">
 <tr><td>
   <div class="cpt" style="width:310px">
   <img src="../img/bitmaps/link_lttp.png"
@@ -145,7 +145,6 @@ the last pixel at <i>w&times;h</i>&minus;1.
 </tr>
 </table>
 </div>
-
 
 Note, however, that when you use another bitdepth, the addresses change 
 too. For example, at 16bpp (2 bytes per pixel), you'd
@@ -192,7 +191,7 @@ The bitmap modes have the following characteristics:
 
 <div class="lblock">
 <table id="tbl-bm-types"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-bm-types]]</em></b>: Bitmap mode 
   characteristics
@@ -1247,7 +1246,7 @@ Look in their respective readme's for more details.
 
 <div class="cpt_fr" style="width:222px;">
 <table id="tbl-endian"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-endian]]</em></b>: Big endian vs little 
   endian interpretation of byte-sequence 01h, 02h, 03h, 04h
