--- a/prehtml/dma.htm
+++ b/prehtml/dma.htm
@@ -110,7 +110,7 @@ one for the actual control bits.
 
 <div class="reg">
 <table class="reg" id="tbl-reg-dmaxcnt"
-  border=1 frame=void cellPadding=4 cellSpacing=0>
+  border=1 frame=void cellPadding=4 >
 <caption class="reg">
   REG_DMAxCNT @ <code>0400:00B8</code>+12<i>x</i>
 </caption>
@@ -132,7 +132,7 @@ one for the actual control bits.
 </table>
 <br>
 
-<table>
+<table class="reg-desc">
   <col class="bits" width=56>
   <col class="bf" width="8%">
   <col class="def" width="12%">
