--- a/prehtml/first.htm
+++ b/prehtml/first.htm
@@ -373,7 +373,7 @@ class="keyw">volatile</span> u32*)(MEM_IO+<span class="num">0x0000</span>))
 <span class="cmt">// === (from tonc_memdef.h) ===========================================
 
 // --- REG_DISPCNT defines ---</span>
-<span class="keyw">#define</span> DCNT_MODE0     <span class="num">0x0000</span>
+<span class="keyw">#define</span> DCNT_MODE0      <span class="num">0x0000</span>
 <span class="keyw">#define</span> DCNT_MODE1      <span class="num">0x0001</span>
 <span class="keyw">#define</span> DCNT_MODE2      <span class="num">0x0002</span>
 <span class="keyw">#define</span> DCNT_MODE3      <span class="num">0x0003</span>
@@ -503,7 +503,7 @@ class="keyw">volatile</span> u32*)(MEM_IO+<span class="num">0x0000</span>))
 </pre>
 
 <div class="cblock">
-<table border=1 cellpadding=2 cellspacing=0 width="90%">
+<table border=1 cellpadding=2 width="90%">
 <col align="right">
 <tr>
   <th width=130>code	<th>type	<th>description
@@ -1545,8 +1545,8 @@ friends.
 </p>
 
 <div class="cblock">
-<table>
-<tbody valign="top">
+<table class="frame-group">
+<tbody>
 <tr>
 <td>
 <div class="cpt" style="width:192px;">
