--- a/prehtml/fixed.htm
+++ b/prehtml/fixed.htm
@@ -324,7 +324,7 @@ shifts because they give a more consistent result.
 
 <div class="cblock">
 <table id="tbl-neg-div"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-neg-div]]</em></b>:
   Division and right-shifts around zero.
@@ -419,7 +419,7 @@ scaling factor, respectively.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fix-add]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <col align="right">
   <col align="center">
   <col align="left">
@@ -440,7 +440,7 @@ scaling factor, respectively.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fix-mul]]</em>)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <col align="right">
   <col align="center">
   <col align="left">
@@ -735,7 +735,7 @@ that's rather monotonous). As you can see 1/7 in hex is
 
 <div class="lblock">
 <table id="tbl-hexfloat"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-hexfloat]]</em></b>: 
   Floating-point representation of 1/7 in base <i>B</i>=16
@@ -762,7 +762,7 @@ the integer part, ignore the (hexi)decimals
 
 <div class="cblock">
 <table id="tbl-rmdiv-bad"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-rmdiv-bad]]</em></b>: 
   <i>x</i>/3, using <i>m</i>= 256\3 = 0x55. Bad at 3, 6, &hellip;
@@ -800,7 +800,7 @@ safe. At least, for a while.
 
 <div class="cblock">
 <table id="tbl-rmdiv-good"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-rmdiv-good]]</em></b>: 
   <i>x</i>/3, using <i>m</i>= (256+2)\3 = 0x56. Still good at 3, 6, &hellip;
