--- a/prehtml/keys.htm
+++ b/prehtml/keys.htm
@@ -79,7 +79,7 @@ name of the button, in caps.
 
 <div class="reg">
 <table class="reg" id="tbl-reg-keys"
-  border=1 frame=void cellpadding=4 cellspacing=0>
+  border=1 frame=void cellpadding=4 >
 <caption class="reg">
   REG_KEYINPUT (REG_P1) @ <code>0400:0130h</code>
 </caption>
@@ -156,7 +156,7 @@ of this register you need to know how to work with
 
 <div class="reg">
 <table class="reg" id="tbl-reg-keycnt"
-  border=1 frame=void cellpadding=4 cellspacing=0>
+  border=1 frame=void cellpadding=4 >
 <caption class="reg">
   REG_KEYCNT (REG_P1CNT) @ <code>0400:0132h</code>
 </caption>
