--- a/prehtml/lab.htm
+++ b/prehtml/lab.htm
@@ -333,8 +333,8 @@ fig&nbsp;<em>[[ref:img-prio-demo]]</em>b; table
 </p>
 
 <div class="cblock">
-<table id="img-prio-demo"
-  border=0 cellpadding=2 cellspacing=0>
+<table id="img-prio-demo" class="frame-group"
+  cellpadding=2 >
 <tbody valign="top">
 <tr>
 <td>
@@ -355,7 +355,7 @@ fig&nbsp;<em>[[ref:img-prio-demo]]</em>b; table
 </table>
 
 <table id="tbl-prio-demo-x"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-prio-demo-x]]</em></b>: legend for 
   <em>[[ref:img-prio-demo]]</em>b.
@@ -418,12 +418,12 @@ axes, and <i>z</i> pointing into the screen. A helix rotating around
 the <i>y</i>-axis can be described by the following relation:
 </p>
 
-<table id="eq-helix">
+<table id="eq-helix" class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-helix]]</em>)
   <td class="eqcell"> <b>x</b>(t) &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -583,9 +583,9 @@ pillar), and 2 if it's on the far side (behind the pillar). It
 hack in the function, shortly followed by the second one.
 </p>
 
-<div class="cpt_fr"  style="width:120px;">
+<div class="cpt_fr" style="width:120px;">
 <table id="tbl-prio-hack1"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-prio-hack1]]</em></b>: object palette banks.
 </caption>
@@ -835,7 +835,7 @@ faster. but the final implementation will be up to you.
 <!-- std reg table
 <div class="reg">
 <table class="reg" 
-  border=1 frame=void cellpadding=4 cellspacing=0>
+  border=1 frame=void cellpadding=4 >
 <caption class="reg">
   REG_<em>XXX</em> @ <code>0400:<em>[[0000]]</em>h</code>
 </caption>
@@ -884,7 +884,7 @@ faster. but the final implementation will be up to you.
 <tr>
   <td class="eqnrcell">()
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <col align="right">
   <col align="center">
   <col align="left">
