--- a/prehtml/matrix.htm
+++ b/prehtml/matrix.htm
@@ -68,7 +68,7 @@ when we get to matrices.
   <td class="eqnrcell">(<em>[[ref:eq-vec-def]]</em>)
   <td class="eqcell"> <b>u</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -157,7 +157,7 @@ with <b>w = u + v</b> we have
   <td class="eqcell"> 
     <b>w</b> &nbsp;=&nbsp; <b>u</b> + <b>v</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -191,7 +191,7 @@ note that subtraction can also be written as
   <td class="eqcell"> 
     <b>v</b> &nbsp;=&nbsp; <i>c</i><b>u</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -252,7 +252,7 @@ the angle between the two, the cosine can be found via
   <td class="eqcell"> 
     cos(&alpha;) &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrB"><b>u &middot; v</b>
@@ -334,7 +334,7 @@ eq&nbsp;<em>[[ref:img-vec-cross]]</em>.
   <td class="eqcell"> 
     <b>w</b> &nbsp;=&nbsp; <b>u</b> &times; <b>v</b> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -506,7 +506,7 @@ For example, the system using variables <i>x, y, z</i>:
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-eqset]]</em>a)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="right">
   <tr>
     <td>  <i>x</i> <td>&minus; <td>2<i>y</i> <td>+ <td>  <i>z</i> 
@@ -530,7 +530,7 @@ can be written down more succinctly using matrices as:
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-eqset]]</em>b)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="right">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -545,7 +545,7 @@ can be written down more succinctly using matrices as:
   <td width=64 align="center">or
   <td class="eqnrcell">(9c)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="right">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -599,7 +599,7 @@ double index.
 	  <b>a</b><sub>1</sub> <b>&hellip; a</b><sub>n</sub>
 	<big>]</big> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="right">
   <tr>
     <td class="bdrLL" rowspan=3>&nbsp;
@@ -860,7 +860,7 @@ formula for one, namely the 2x2 case:
   <td class="eqnrcell">(<em>[[ref:eq-2d-inv]]</em>)
   <td class="eqcell"> <b>A</b> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -877,7 +877,7 @@ formula for one, namely the 2x2 case:
   <td width=32>&nbsp;
   <td class="eqcell"> <b>A</b><sup>&minus;1</sup> &nbsp;&equiv;&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrB"> 1
@@ -886,7 +886,7 @@ formula for one, namely the 2x2 case:
   </tbody>
   </table>
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -923,7 +923,7 @@ column vectors of <b>E</b>. <i>c</i> is a scalar.
 </p>
 
 <div class="lblock">
-<table cellpadding=2 cellspacing=0>
+<table cellpadding=2 >
 <tr>
   <td><b>A + B</b> = <b>B + A</b>
 <tr>
@@ -1088,7 +1088,7 @@ we get
     <b>M</b> &nbsp;=&nbsp;
 	<big>[</big> <b>i &nbsp; j</b> <big>]</big> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1104,7 +1104,7 @@ we get
   </table>
   <td class="eqcell">&nbsp; , &nbsp; <b>x</b> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1119,7 +1119,7 @@ we get
     <b>M</b>&prime; &nbsp;=&nbsp;
 	<big>[</big> <b>u &nbsp; v</b> <big>]</big> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
@@ -1135,7 +1135,7 @@ we get
   </table>
   <td class="eqcell">&nbsp; , &nbsp; <b>x</b>&prime; &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <tbody align="center">
   <tr>
     <td class="bdrLL" rowspan=2>&nbsp;
