--- a/prehtml/numbers.htm
+++ b/prehtml/numbers.htm
@@ -245,7 +245,7 @@ of course, we need the powers of two themselves. The first 11 are:
 
 <div class="lblock">
 <table id="tbl-pot"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom"><b>Table <em>[[ref:[tbl-pot]]</em></b>: powers of two</caption>
 <col span=3 align="right">
 <tr align="center"><th>exponent<th>binary<th>decimal
@@ -320,7 +320,7 @@ Note the alternating sequences in the binary column.
 
 <div class="cblock">
 <table id="tbl-count"
-  border=1 cellpadding=2 cellspacing=0 rules=cols>
+  border=1 cellpadding=2 rules=cols>
 <col span=4 align="right">
 <tr><th> dec	<th> bin	<th> hex	<th> oct
 <tr><td>   0	<td>    0	<td>   0    <td>   0
@@ -437,7 +437,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
 <div class="cblock">
 <table id="tbl-multiply">
 <tr><td>
-  <table border=1 cellpadding=2 cellspacing=0>
+  <table border=1 cellpadding=2 >
   <caption><b>Table <em>[[ref:tbl-multiply]]</em>a</b>: decimal multiplication table</caption>
   <col span=11 align="right">
   <tr><th> x
@@ -476,7 +476,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
   </table>
 
 <td width=64><td>
-  <table border=1 cellpadding=2 cellspacing=0>
+  <table border=1 cellpadding=2 >
   <caption><b>Table <em>[[ref:tbl-multiply]]</em>b</b>: hex multiplication table</caption>
   <col span=17 align="right">
   <tr><th> x
@@ -538,7 +538,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
 <table>
 <tr>
   <td>
-  <table border=1 cellpadding=2 cellspacing=0>
+  <table border=1 cellpadding=2 >
   <caption>123 &times; 456, base ten</caption>
   <col span=5 align="right">
   <tr><td>&times; <th> 100  <th>   20 <th>    3	<th> sum
@@ -550,7 +550,7 @@ hexadecimal. I've also given the multiplication tables for convenience.
 
   <td width=32>
   <td>
-  <table border=1 cellpadding=2 cellspacing=0>
+  <table border=1 cellpadding=2 >
   <caption>123 &times; 456, base 16</caption>
   <col span=5 align="right">
   <tr><td>&times; <th> 100  <th>   20 <th>    3	<th> sum
@@ -602,7 +602,7 @@ example, &pi; can be broken down like this:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 cellspacing=0>
+<table border=1 cellpadding=2 >
 <col span=9 width=32>
 <tr align="center">
   <th>exp
@@ -633,7 +633,7 @@ as well in binary. &pi; in binary is:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 cellspacing=0>
+<table border=1 cellpadding=2 >
 <col span=9 width=16>
 <tr align="center">
   <th>exp
@@ -674,7 +674,7 @@ would go like this:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 cellspacing=0 rules=cols>
+<table border=1 cellpadding=2 rules=cols>
 <tr><th> num  <th> / 16 <th> %16
 <tr><td> 1110 <td> 69   <td> 6
 <tr><td>   69 <td> 4    <td> 5
@@ -827,7 +827,7 @@ complement</dfn>. The table below shows how this works for 3 digits.
 
 <div class="lblock">
 <table id="tbl-10cmpl"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-10cmpl]]</em></b>: tens' complement for 3 digits
 </caption>
@@ -870,7 +870,7 @@ otherwise it won't work. The actual representation of -<i>x</i> using
 <tr>
   <td class="eqnrcell">(3)
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <col align="right">
   <col align="center">
   <col align="left">
@@ -914,7 +914,7 @@ just the inversion of all the bits of <i>x</i>. Take 76, for example:
 <tr>
   <td class="fill">&nbsp;
   <td class="eqcell">
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
   <col align="right">
   <col align="center">
   <col align="left">
@@ -976,7 +976,7 @@ comparison and bit-operations. A byte <i>x</i> containing FFh could
 mean a signed &minus;1 or an unsigned 255. In that case:
 
 <div class="lblock">
-<table border=1 cellspacing=0 cellpadding=2>
+<table border=1 cellpadding=2>
 <tr><td>FFh	<th>signed 		<th>unsigned
 <tr><th>comparison x&lt;0
   <td>true <td> false
@@ -1060,7 +1060,7 @@ yourself warned.
 
 <div class="cblock">
 <table id="tbl-ascii"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref-tbl-ascii]]</em></b>: ASCII 0-127
 </caption>
@@ -1172,7 +1172,7 @@ float
 
 <div class="reg">
 <table class="reg" id="tbl-float-fmt"
-  border=1 frame=void cellpadding=4 cellspacing=0>
+  border=1 frame=void cellpadding=4 >
 <caption class="reg">
   IEEE format for 32bit float
 </caption>
@@ -1229,7 +1229,7 @@ in a 2s' complement number). Two examples:
 </p>
 
 <div class="lblock">
-<table border=1 cellpadding=2 cellspacing=0>
+<table border=1 cellpadding=2 >
 <tr align="center"><th>x <th>s <th> e <th> f
 <tr><th>1.0  <td>0 <td>01111111 <td> 000 0000 0000 0000 0000 0000
 <tr><th>&minus;1.0 <td>1 <td>01111111 <td> 000 0000 0000 0000 0000 0000
@@ -1312,7 +1312,7 @@ transfer that to a computer with a different endian-scheme.
 
 <div class="lblock">
 <table id="tbl-endian"
-  border=1 cellpadding=2 cellspacing=0 width=30%>
+  border=1 cellpadding=2 width=30%>
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-endian]]</em></b>: storing 0x11223344
 </caption>
@@ -1451,7 +1451,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
   <b>Table <em>[[ref:tbl-bitops-truth]]</em></b>: bit operations
 </caption>
   <tr valign="top"><td>
-    <table border=1 cellpadding=2 cellspacing=0 frame=void rules=groups>
+    <table border=1 cellpadding=2 frame=void rules=groups>
     <colgroup align="center">
     <colgroup align="center">
     <colgroup align="center">
@@ -1466,7 +1466,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
     </table>
   <td width=32>
   <td>
-    <table border=1 cellpadding=2 cellspacing=0 frame=void rules=groups>
+    <table border=1 cellpadding=2 frame=void rules=groups>
     <colgroup align="center">
     <colgroup align="center">
     <thead>
@@ -1487,7 +1487,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 </caption>
   <col span=4 width=144>
   <tr valign="bottom"><td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <tr><th align="center" colspan=3>AND
     <tr>
 	  <th><code>0Fh</code>
@@ -1501,7 +1501,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 	  <td><code><font color=red><b>0000</b></font>0101</code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <tr><th align="center" colspan=3>OR
     <tr>
 	  <th><code>0Fh</code>
@@ -1515,7 +1515,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 	  <td><code>0011<font color=red><b>1111</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <tr><th align="center" colspan=3>XOR
     <tr>
 	  <th><code>0Fh</code>
@@ -1529,7 +1529,7 @@ Table 8 shows examples of these operators on bytes 0Fh and 35h.
 	  <td><code>0011<font color=red><b>1010</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <tr><th align="center" colspan=3>NOT
     <tr><td>&nbsp;
     <tr>
@@ -1590,7 +1590,7 @@ operators like '|='.
 <col span=4 width=144>
 <tr valign="bottom">
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <caption><b>AND (keep bits)</b><br> <i>s &amp; m</i></caption>
     <tr>
 	  <th><code>35h</code>&nbsp;
@@ -1604,7 +1604,7 @@ operators like '|='.
 	  <td><code><font color=red><b>0000</b></font>0101</code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <caption><b>OR (set bits)</b> <br> <i>s | m</i></caption>
     <tr>
 	  <th><code>35h</code>&nbsp;
@@ -1618,7 +1618,7 @@ operators like '|='.
 	  <td><code>0011<font color=red><b>1111</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <caption><b>XOR (flip bits)</b> <br> <i>s ^ m</i></caption>
     <tr>
 	  <th><code>35h</code>&nbsp;
@@ -1632,7 +1632,7 @@ operators like '|='.
 	  <td><code>0011<font color=red><b>1010</b></font></code>
   </table>
   <td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <caption><b>AND NOT (clear bits)</b> <br> <i>s &amp;~ m</i></caption>
     <tr>
 	  <th><code>&nbsp;35h</code>&nbsp;
@@ -1669,7 +1669,7 @@ variable, in pretty much the way you'd expect:
 
 <div class="lblock">
 <table id="tbl-shift"
-  cellpadding=4 cellspacing=0 frame=void rules=groups>
+  cellpadding=4 frame=void rules=groups>
 <caption class="bottom"><b>Table <em>[[ref:tbl-shift]]</em></b>: shift / rotate operations on
   byte 35h (<code>00110101</code>)</caption>
 <colgroup>
@@ -1749,7 +1749,7 @@ you'd get by sign-bit extension or not.
 
 <div class="lblock">
 <table id="tbl-sign"
-  border=1 cellspacing=0 cellpadding=2>
+  border=1 cellpadding=2>
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-sign]]</em></b>: signed and unsigned <code>80h&gt;&gt;3</code>
 </caption>
@@ -1833,7 +1833,7 @@ constant is a power of two.
 
 <div class="lblock">
 <table id="tbl-bitops-arith"
-  cellpadding=4 cellspacing=0 frame=void rules=groups>
+  cellpadding=4 frame=void rules=groups>
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-bitops-arith]]</em></b> Arithmetic bit-ops summary
 </caption>
@@ -1879,7 +1879,7 @@ an 8bit computer, cool huh?
 
 <div class="lblock">
 <table id="tbl-adder"
-  border=1 cellspacing=0 cellpadding=2 frame=void rules=groups width=10%>
+  border=1 cellpadding=2 frame=void rules=groups width=10%>
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-adder]]</em></b>: 1-bit adder
 </caption>
