--- a/prehtml/setup.htm
+++ b/prehtml/setup.htm
@@ -547,7 +547,7 @@ of the options.
 
 <div class="lblock">
 <table id="tbl-tonc-cfg"
-  border=1 cellspacing=0 cellpadding=2 frame=void rules=cols>
+  border=1 cellpadding=2 frame=void rules=cols>
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-tonc-cfg]]</em></b>: building tonc projects.
 </caption>
@@ -1198,7 +1198,7 @@ as well:
 
 <div class="lblock">
 <table id="tbl-make-vardef"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table</b> <em>[[ref:tbl-make-vardef]]</em>: variable definitions.
 </caption>
@@ -1266,7 +1266,7 @@ of the automatic variables available; for a full list, go to the
 
 <div class="lblock">
 <table id="tbl-make-autovars"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table</b> <em>[[ref:tbl-make-autovars]]</em>: automatic variables for rules.
 </caption>
