--- a/prehtml/timers.htm
+++ b/prehtml/timers.htm
@@ -99,7 +99,7 @@ on that later. It should be noted that the screen refreshes every
 
 <div class="lblock">
 <table id="tbl-tmr-freq" 
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-tmr-freq]]</em></b>: Timer frequencies
 </caption>
@@ -139,7 +139,7 @@ found in table <em>[[ref:tbl-tmr-reg]]</em>.
 
 <div class="reg">
 <table class="reg" id="tbl-reg-tmxcnt"
-  border=1 frame=void cellpadding=4 cellspacing=0>
+  border=1 frame=void cellpadding=4 >
 <caption class="reg">
   REG_TMxCNT @ <code>0400:0102</code> + 4<i>x</i>
 </caption>
