--- a/prehtml/toc.htm
+++ b/prehtml/toc.htm
@@ -39,7 +39,7 @@
   Preface</h2>
 
 <div class="lblock">
-<table cellpadding=1 cellspacing=0 width=70%>
+<table cellpadding=1 width=70%>
 <col width=5%><col width=80%>
 <tr>
   <td> i </td>
@@ -61,7 +61,7 @@
   GBA Basics</h2>
 
 <div class="lblock">
-<table cellpadding=1 cellspacing=0 width=70%>
+<table cellpadding=1 width=70%>
 <col width=5%><col width=80%>
 <tr>
   <td> 1 </td>
@@ -118,7 +118,7 @@
   GBA Extended</h2>
 
 <div class="lblock">
-<table cellpadding=1 cellspacing=0 width=70%>
+<table cellpadding=1 width=70%>
 <col width=5%><col width=80%>
 <tr>
   <td> 10 </td>
@@ -176,7 +176,7 @@
   Advanced / Applications</h2>
 
 <div class="lblock">
-<table cellpadding=1 cellspacing=0 width=70%>
+<table cellpadding=1 width=70%>
 <col width=5%><col width=80%>
 <tr>
   <td> 19 </td>
@@ -217,7 +217,7 @@
   Appendixes</h2>
 
 <div class="lblock">
-<table cellpadding=1 cellspacing=0 width=70%>
+<table cellpadding=1 width=70%>
 <col width=5%><col width=80%>
 <tr>
   <td> A </td>
