--- a/prehtml/tte.htm
+++ b/prehtml/tte.htm
@@ -601,7 +601,7 @@ abbreviations that need to be clarified.
 
 <div class="lblock">
 <table id="tbl-tte-family"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-tte-family]]</em></b>: TTE render family 
   indicators and initializers. 4bpp Tiles can be row or column major 
@@ -643,7 +643,7 @@ abbreviations that need to be clarified.
 
 <div class="lblock">
 <table id="tbl-tte-drawg"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-tte-drawg]]</em></b>: Render type summary.
 </caption>
@@ -693,7 +693,7 @@ they have helped me read my own code.
 
 <div class="lblock">
 <table id="tbl-tte-brevs"
-  border=1 cellpadding=4 cellspacing=0>
+  border=1 cellpadding=4 >
 <caption class="bottom">
 Table&nbsp;<em>[[ref:tbl-tte-brevs]]</em>. Abbreviations used in 
 rendering code.
@@ -956,15 +956,16 @@ charblock now has two sets of glyphs
 
 
 <div class="cblock">
-<table width=60%>
-<tr valign="bottom">
+<table class="frame-group">
+<tr>
   <td>
-	<div class="cpt_fl" style="width:128px;">
+	<div class="cpt" style="width:128px;">
 	  <img src="../img/tte/cyber16.png" id="img-cyber16"
 		alt="Cybernator font: 8&times;16."><br>
 	  <b>Fig <em>[[ref:img-cyber16]]</em></b>: Cybernator font: 8&times;16.
 	</div>
   </td>
+  <td>&nbsp;</td>
   <td>
 	<div class="cpt" style="width:240px;">
 	  <img src="../img/tte/test_tte_se4.png" id="img-test-se4"
@@ -972,8 +973,6 @@ charblock now has two sets of glyphs
 	  <b>Fig <em>[[ref:img-test-se4]]</em>a</b>: <code>test_tte_se4</code> output.
 	</div>
   </td>
-</tr>
-<tr valign="top">
   <td>
 	<div class="cpt" style="width:128px;">
 	  <img src="../img/tte/tte_se4_pal.png"
@@ -988,7 +987,6 @@ charblock now has two sets of glyphs
 	  <b>Fig <em>[[ref:img-test-se4]]</em>c</b>: Tileset.
 	</div>
   </td>
- </tr>
 </table>
 </div>
 
@@ -1986,7 +1984,7 @@ a column of tiles are consecutive.
 </p>
 
 <div class="cblock" id="img-chr4-map">
-<table border=0 cellpadding=4 cellspacing=0 width=70%>
+<table cellpadding=4 width=70%>
 <tr>
   <td>
     <img src="../img/tte/chr4r_map.png" alt="">
@@ -2147,8 +2145,8 @@ fig&nbsp;<em>[[ref:img-chr4-test]]</em>a emerge.
 </p>
 
 <div class="cblock">
-<table width=60% id="img-chr4-test">
-<tr valign="top">
+<table id="img-chr4-test" class="frame-group" width=50%>
+<tr>
   <td>
 	<div class="cpt" style="width:80px;">
 	  <img src="../img/tte/chr4_test.png"
@@ -3054,7 +3052,7 @@ thing, depending on the number of parameters.
 
 <div class="cblock">
 <table id="tbl-tte-cmd"
-  border=1 cellpadding=2 cellspacing=0 width= 70%>
+  border=1 cellpadding=2 width= 70%>
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-tte-cmd]]</em></b>: Available TTE formatting 
   tags.
@@ -3484,7 +3482,7 @@ The ones you'll encounter most are the following:
 
 <div class="lblock">
 <table id="tbl-vt100"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-vt100]]</em></b>: Common VT100 sequences
 </caption>
@@ -3588,7 +3586,7 @@ representing bigger numbers.
 
 <div class="cblock">
 <table id="tbl-utf8"
-  border=1 cellpadding=4 cellspacing=0>
+  border=1 cellpadding=4 >
 <caption class="bottom">
 Table&nbsp;<em>[[ref:tbl-utf8]]</em>. UTF-8 to u32 conversion table.
 </caption>
@@ -3779,7 +3777,7 @@ followed by death. Good luck!&rdquo;
 
 <div class="lblock">
 <table id="tbl-tte-profile"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-tte-profile]]</em></b>: 
   Renderer times. Conditions: 194 chars, verdana 9, 
