--- a/prehtml/video.htm
+++ b/prehtml/video.htm
@@ -106,7 +106,7 @@ table <em>[[ref:tbl-disp-timing]]</em>.
 
   <td>
 	<table id="tbl-disp-timing" 
-	  border=1 cellspacing=0 cellpadding=2>
+	  border=1 cellpadding=2>
 	<caption class="bottom">
 	  <b>Table <em>[[ref:tbl-disp-timing]]</em></b>: Display timing details
 	</caption>
@@ -256,7 +256,7 @@ been explained in the
 
 <div class="reg">
 <table class="reg" id="tbl-reg-dispcnt"
-  border=1 frame=void cellPadding=4 cellSpacing=0>
+  border=1 frame=void cellPadding=4 >
 <caption class="reg">
   REG_DISPCNT @ <code>0400:0000h</code>
 </caption>
@@ -357,7 +357,7 @@ know how that works, don't you?
 
 <div class="reg">
 <table class="reg" id="tbl-reg-dispstat"
-  border=1 frame=void cellPadding=4 cellSpacing=0>
+  border=1 frame=void cellPadding=4 >
 <caption class="reg">
   REG_DISPSTAT @ <code>0400:0004h</code>
 </caption>
@@ -420,7 +420,7 @@ know how that works, don't you?
 
 <div class="reg">
 <table class="reg" id="tbl-reg-vcount"
-  border=1 frame=void cellPadding=4 cellSpacing=0>
+  border=1 frame=void cellPadding=4 >
 <caption class="reg">
   REG_VCOUNT @ <code>0400:0006h</code> (read-only)
 </caption>
