--- a/prehtml/asm.htm
+++ b/prehtml/asm.htm
@@ -922,7 +922,7 @@ into this category too. The rest, <b>r4-r11</b>, are also known as
 
 <div class="lblock">
 <table id="tbl-regnames"
-  border=1 cellpadding=1 cellspacing=0>
+  border=1 cellpadding=1 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-regnames]]</em></b>. Standard and alternative 
   register names. 
@@ -1274,7 +1274,7 @@ both, the conditional affix always comes first.
 </p>
 
 <div class="cblock">
-<table id="tbl-ins-data">
+<table id="tbl-ins-data" class="frame-group">
 <caption class="bottom">
   <b><em>[[ref:tbl-ins-data]]</em></b>: Data processing instructions.
   Basic format <code>op{cond}{s} Rd, Rn, Op2</code>, 
@@ -1284,7 +1284,7 @@ both, the conditional affix always comes first.
 
 <tr>
 <td>
-  <table border=1 cellpadding=2 cellspacing=0>
+  <table border=1 cellpadding=2 >
     <tr align="center"><th>opcode		<th>operands	<th> function
     <tr><th colspan=3 align="center">Arithmetic				</tr>
     <tr><td>adc		<td>Rd, Rn, Op2 <td>Rd = Rn + Op2 + C	</tr>
@@ -1304,7 +1304,7 @@ both, the conditional affix always comes first.
 </td>
 <td width=10%>&nbsp;</td>
 <td>
-  <table border=1 cellpadding=2 cellspacing=0>
+  <table border=1 cellpadding=2 >
     <tr align="center"><th>opcode		<th>operands	<th> function
     <tr><th colspan=3 align="center">Status ops			</tr>
     <tr><td>cmp		<td>Rn, Op2		<td>Rn - Op2		</tr>
@@ -1836,7 +1836,7 @@ which expand to &lsquo;<code>stmfd sp!,</code>&rsquo; and
 
 <div class="lblock">
 <table id="tbl-block"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-block]]</em></b>: Block transfer 
   instructions.
@@ -1923,7 +1923,7 @@ is non-zero, and continue with the next instruction if it isn't.
 
 <div class="lblock">
 <table id="tbl-cnd-afx"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-cnd-afx]]</em></b>: conditional affixes.
 </caption>
@@ -1999,7 +1999,7 @@ for numbers larger thatn the registers.
 </caption>
 <col width=160>
 <tr valign="bottom"><td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <tr>
 	  <th>2<sup>31</sup> &nbsp;
 	  <td><code>&nbsp;&nbsp;8000 0000</code>
@@ -2054,7 +2054,7 @@ information to pick the right one.
 </caption>
 <col width=160>
 <tr valign="bottom"><td>
-  <table class="eqtbl" cellpadding=2 cellspacing=0>
+  <table class="eqtbl" cellpadding=2 >
     <tr>
 	  <th>+2<sup>30</sup> &nbsp;
 	  <td><code>4000 0000</code>
@@ -2772,32 +2772,32 @@ it'll just have to wait. I-cycles do not suffer from waitstates.
 </p>
 
 <div class="cblock">
-<table width=80% align="center">
+<table class="frame-group" width=80%>
 <tr>
 <td><table id="tbl-cycles"
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-cycles]]</em></b>: Cycle times for the most 
 important instructions.
 </caption>
-<tr> <th>Instruction</th> <th>Cycles</th> </tr>
-<tr> <td>Data</td> <td>1S</td> </tr>
-<tr> <td>ldr(type)</td>   <td>1N + 1N<sub>d</sub> + 1I</td> </tr>
-<tr> <td>str(type)</td>   <td>1N + 1N<sub>d</sub></td></tr>
-<tr> <td>ldm {<i>n</i>}</td> 
-  <td>1N + 1N<sub>d</sub> + (<i>n</i>-1)S<sub>d</sub>+ 1I</td> </tr>
-<tr> <td>stm {<i>n</i>}</td> 
-  <td>1N + 1N<sub>d</sub> + (<i>n</i>-1)S<sub>d</sub></td> </tr>
-<tr> <td>b/bl/bx/swi</td> <td>2S + 1N</td></tr>
-<tr> <td>THUMB bl</td> <td>3S + 1N</td></tr>
-<tr> <td>mul</td> <td>1S + <i>m</i>I</td></tr>
-<tr> <td>mla/mull</td> <td>1S + (<i>m</i>+1)I</td></tr>
-<tr> <td>mlal</td> <td>1S + (<i>m</i>+2)I</td></tr>
+  <tr> <th>Instruction</th> <th>Cycles</th> </tr>
+  <tr> <td>Data</td> <td>1S</td> </tr>
+  <tr> <td>ldr(type)</td>   <td>1N + 1N<sub>d</sub> + 1I</td> </tr>
+  <tr> <td>str(type)</td>   <td>1N + 1N<sub>d</sub></td></tr>
+  <tr> <td>ldm {<i>n</i>}</td> 
+    <td>1N + 1N<sub>d</sub> + (<i>n</i>-1)S<sub>d</sub>+ 1I</td> </tr>
+  <tr> <td>stm {<i>n</i>}</td> 
+    <td>1N + 1N<sub>d</sub> + (<i>n</i>-1)S<sub>d</sub></td> </tr>
+  <tr> <td>b/bl/bx/swi</td> <td>2S + 1N</td></tr>
+  <tr> <td>THUMB bl</td> <td>3S + 1N</td></tr>
+  <tr> <td>mul</td> <td>1S + <i>m</i>I</td></tr>
+  <tr> <td>mla/mull</td> <td>1S + (<i>m</i>+1)I</td></tr>
+  <tr> <td>mlal</td> <td>1S + (<i>m</i>+2)I</td></tr>
 
 </table></td>
 
 <td><table id="tbl-waits" 
-  border=1 cellpadding=2 cellspacing=0>
+  border=1 cellpadding=2 >
 <caption class="bottom">
   <b>Table <em>[[ref:tbl-waits]]</em></b>: Section default timing details. 
   See also 
@@ -2806,15 +2806,15 @@ important instructions.
 <col>
 <col span=3 align="center">
 <tbody align="center">
-<tr> <th>Section</th> <th>Bus</th> <th>Wait (N/S)</th> <th>Access 8/16/32</tr>
-<tr> <th>BIOS </th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
-<tr> <th>EWRAM</th> <td>16</td> <td>2/2</td> <td>3/3/6</td> </tr>
-<tr> <th>IWRAM</th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
-<tr> <th>IO   </th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
-<tr> <th>PAL  </th> <td>16</td> <td>0/0</td> <td>1/1/2</td> </tr>
-<tr> <th>VRAM </th> <td>16</td> <td>0/0</td> <td>1/1/2</td> </tr>
-<tr> <th>OAM  </th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
-<tr> <th>ROM  </th> <td>16</td> <td>4/2</td> <td>5/5/8</td> </tr>
+  <tr> <th>Section</th> <th>Bus</th> <th>Wait (N/S)</th> <th>Access 8/16/32</tr>
+  <tr> <th>BIOS </th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
+  <tr> <th>EWRAM</th> <td>16</td> <td>2/2</td> <td>3/3/6</td> </tr>
+  <tr> <th>IWRAM</th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
+  <tr> <th>IO   </th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
+  <tr> <th>PAL  </th> <td>16</td> <td>0/0</td> <td>1/1/2</td> </tr>
+  <tr> <th>VRAM </th> <td>16</td> <td>0/0</td> <td>1/1/2</td> </tr>
+  <tr> <th>OAM  </th> <td>32</td> <td>0/0</td> <td>1/1/1</td> </tr>
+  <tr> <th>ROM  </th> <td>16</td> <td>4/2</td> <td>5/5/8</td> </tr>
 </tbody>
 </table></td>
 </table>
@@ -2915,7 +2915,7 @@ all <code>add</code> forms.
 
 <div class="reg">
 <table class="reg" id="tbl-arm-add"
-  border=1 frame=void cellpadding=2 cellspacing=0>
+  border=1 frame=void cellpadding=2 >
 <caption class="reg">
   <b>Table <em>[[ref:ssec-arm-add]]</em></b>: The <code>add</code> 
   instruction(s)
@@ -3233,7 +3233,7 @@ itself.
   </p>
   <div style="margin:0.5em;">
   <table id="tbl-thumb-mem"
-    border=1 cellpadding=2 cellspacing=0>
+    border=1 cellpadding=2 >
   <caption class="bottom">
     <b>Table <em>[[ref:tbl-thumb-mem]]</em></b>. THUMB addressing mode 
     availability.
